# mr-recv-coil-match-networks

./: .gitattributes  .gitignore  .zenodo.json  MANIFEST.in  README.md  mr_recv_coil_match_networks.ipynb  pyproject.toml
derivations/: README.md  requirements.txt
derivations/invalid/: double_extended_pi_1.ipynb  double_extended_pi_10.ipynb  double_extended_pi_2.ipynb  double_extended_pi_3.ipynb  double_extended_pi_4.ipynb  double_extended_pi_5.ipynb  double_extended_pi_6.ipynb  double_extended_pi_7.ipynb  double_extended_pi_8.ipynb  double_extended_pi_9.ipynb  extended_box_5.ipynb  extended_box_6.ipynb  extended_bridged_t_1.ipynb  extended_bridged_t_10.ipynb  extended_bridged_t_11.ipynb  extended_bridged_t_12.ipynb  extended_bridged_t_2.ipynb  extended_bridged_t_3.ipynb  extended_bridged_t_4.ipynb  extended_bridged_t_5.ipynb  extended_bridged_t_6.ipynb  extended_bridged_t_7.ipynb  extended_bridged_t_8.ipynb  extended_bridged_t_9.ipynb  extended_lattice_4.ipynb  extended_lattice_5.ipynb  m.ipynb  reverse_tilde.ipynb  w.ipynb
derivations/valid/: crest.ipynb  extended_box_1.ipynb  extended_box_2.ipynb  extended_box_3.ipynb  extended_box_4.ipynb  extended_lattice_1.ipynb  extended_lattice_2.ipynb  extended_lattice_3.ipynb  h.ipynb  tilde.ipynb  trough.ipynb
src/mr_recv_coil_match_networks/: __init__.py  preamp_decoupling.py  topology.py  wang2023.py
