[project]
name = "mr-recv-coil-match-networks"
version = "2.0.0"
authors = [
  { name="Rasmus Jepsen", email="rasale@dtu.dk" },
]
description = "Models MRI receive coil matching networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lcapy>=1.15", "numpy>=1.24.3", "sympy>=1.12", "scikit_rf>=0.31.0", "lc_power_match_baluns>=2.0.0", "multimethod>=1.11.2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "LGPL-2.1-or-later"}

[project.urls]
"Homepage" = "https://github.com/dtudk/mr-recv-coil-match-networks"
"Bug Tracker" = "https://github.com/dtudk/mr-recv-coil-match-networks/issues"

[build-system]
requires = [
    "setuptools_scm[toml]>=6.2",
]